--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="parent">
     <div class="child">
 <img src="images/profile.png" alt="profile">
-<h2>Geetha</h2>
+<h2>ANOOSHA</h2>
 <h3>(Fresher)</h3>
 <a href="resume.html"class="a"> Visit Profile</a>
     </div>
