--- a/resume.html
+++ b/resume.html
@@ -17,10 +17,13 @@
 <p>Visakhapatnam,Andrapradesh</p>
 <p>+91 9000754520</p>
       </div>
-      <div class="rightChild">
+      <div class="rightChild" id="child2">
 
       </div>
     </div>
+<script type="text/javascript" src="main.js">
+
+</script>
 
   </body>
 </html>
